...
            value = viewModel.notes.value,
            onValueChange = {
                // Update the state when the value changes
                viewModel.notes.value = it
            },
            modifier = Modifier
                .fillMaxWidth().testTag("notes_tag")
                .padding(16.dp),
            label = { Text("Enter your Notes") },
            singleLine = true
        )

        Button(
...
                    }

                }

            }, modifier = Modifier.padding(16.dp)
        ) {
            Text("Add TODO")
        }
        if (viewModel.loading.value) {
            Box(modifier = Modifier.fillMaxSize(), contentAlignment = Alignment.Center) {
                CircularProgressIndicator()
            }

...
