...
        floatingActionButton = {
            FloatingActionButton(onClick = {
                onNavigate.navigate(Routes.ADD_TODO)
            }) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "Add"
                )
            }
        },
        content = { paddingValues ->
            Column(Modifier.fillMaxSize()) {

...
